--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,9 @@
-body{ 	width: 1440px;
+body{
+
 	margin: 0px auto;
 	background-color: #ffffff;
 }
-div{
-	display: block;
-}
+
 .up{	padding: 20px 50px 15px;
 	background-color: #f4df22;
 }
@@ -87,20 +86,27 @@ a, a:active, a:hover{
 	border-radius: 18px;
 	height: 630px;
 }
-.information{
-	padding: 40px;
-}
-.title2{
-	font-size: 36px;
-	font-family: Franklin Gothic;
-	font-kerning: normal;
-	font-stretch: ultra-condensed;
-}
-.info{
+
+
+
+.post .information {
+	padding: 40px !important;
 	font-size: 12px;
 	font-family: Franklin Gothic;
 	font-kerning: normal;
 	padding: 10px;
 	width: 45%;
+}
+.post .information h3 {
+	font-size: 36px;
+	font-family: Franklin Gothic;
+	font-kerning: normal;
+	font-stretch: ultra-condensed;
+}
+.post .information p {
+
+}
+.info{
+
 	
 }
