element structure created, fonts are not done

--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ a, a:active, a:hover{
 .post .information p {
 
 }
-.info p{
+.info p {
 	font-size: 12px;
 	font-family: Franklin Gothic;
 	font-kerning: normal;
@@ -114,7 +114,48 @@ a, a:active, a:hover{
 	width: 45%;
 	
 }
-.row img{
-	max-width: 100%;
+.row img {
+	max-width: 80%;
 	text-align: center;
+}
+
+.el-box {
+	border-radius: 5px;
+	box-shadow:0 0 20px #f5f5f6;
+	text-align: center;
+}
+.el-up-button {
+	background-color: #f4df22;
+	border-radius: 	5px;
+	display: inline-block;
+	float: right;
+	font-size: 14px;
+	font-family: Franklin Gothic;
+	font-kerning: normal;
+	font-stretch: ultra-condensed;
+}
+.el-box img {
+	max-width: 80%;
+}
+.el-desc {
+	font-size: 10px;
+	color: #534d4d;
+	font-family: Franklin Gothic;
+	font-kerning: normal;
+	font-stretch: ultra-condensed;
+	padding: 10px;
+}
+.price {
+	display: inline-block;
+	font-size: 14px;
+	font-family: Franklin Gothic;
+	font-kerning: normal;
+	font-stretch: ultra-condensed;
+}
+.price h6 {
+	color: #ee6d24;
+	float: left;
+}
+.price h5 {
+	color
 }
