--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,12 @@
 body{
-
-	margin: 0px auto;
 	background-color: #ffffff;
+	line-height: normal !important;
 }
-
-.up{	padding: 20px 50px 15px;
+.overflow{
+	
+}
+.up{
+	padding: 20px 50px 15px;
 	background-color: #f4df22;
 }
 .headtext{	
@@ -16,36 +18,40 @@ body{
 }
 .middle{	
 	margin: 50px 20px;
-	align-items: center;
 }
-.group{
-	margin: 30px;
-}
+
 .lights{
+	margin: 0px auto;
 	max-width: 1440px;
 	background-color: #8B978C;
 	background-image: url(1.jpg);
 	background-repeat: no-repeat;
 	background-position: center;
 	height: 600px;
+	min-height: 600px;
 	padding: 30px;
 	text-align: center;
-
 	border-radius: 18px;
 }
-.name{	font-kerning: normal;
+.height-center {
+	margin: 230px auto;
+}
+.name{
+	display: inline;
+	font-kerning: normal;
 	font-stretch: ultra-condensed;
-
+	vertical-align: middle!important;
 	font-family: Franklin Gothic;
-	padding: 20px;
+	/*padding: 20px;
 	margin-top: 180px;
-	margin-bottom: 25px;
+	margin-bottom: 25px;*/
 	font-size: 48px;
 	text-align: center;
 	color:#f4df21;
 }
 
 .menu{
+	display: inline;
  	border-radius: 3px;
  	border: 1px solid #f4df22;
  	text-align: center;
@@ -58,8 +64,8 @@ body{
 	font-kerning: normal;
 	font-stretch: ultra-condensed;
 	color: #f4df22;
-	padding: 10px;
-	margin: 10px 10px;
+	padding: 10px 15px;
+	margin: 20px 25px;
 	display: inline-block;
 }
 a, a:active, a:hover{
@@ -89,53 +95,66 @@ a, a:active, a:hover{
 
 
 
-.post .information {
-	padding: 40px ;
+.information {
+	padding: 40px 60px;
 	font-size: 12px;
 	font-family: Franklin Gothic;
 	font-kerning: normal;
-	padding: 10px;
-	width: 45%;
+	max-width: 50%;
+	overflow: auto;
+	max-height: 400px;
 }
-.post .information h3 {
-	font-size: 36px;
+.post h3 {
+	line-height: 1.2 !important;
+	padding-left: 60px;
+	padding-top: 80px;
+	font-size: 38px;
 	font-family: Franklin Gothic;
 	font-kerning: normal;
 	font-stretch: ultra-condensed;
-}
-.post .information p {
-
 }
 .info p {
 	font-size: 12px;
 	font-family: Franklin Gothic;
 	font-kerning: normal;
-	padding: 10px;
-	width: 45%;
 	
 }
+
 .row img {
 	max-width: 80%;
 	text-align: center;
 }
-
+.shop-el-cont1 {
+	margin: 40px auto;
+}
 .el-box {
 	border-radius: 5px;
-	box-shadow:0 0 20px #f5f5f6;
+	box-shadow:0 0 40px #f5f5f6;
 	text-align: center;
+	margin: 20px 0px;
+}
+.el-mar {
 }
 .el-up-button {
 	background-color: #f4df22;
-	border-radius: 	5px;
+	border-radius: 	3px;
+	border-bottom-right-radius: 0px;
+	border-top-right-radius: 0px;
 	display: inline-block;
 	float: right;
-	font-size: 14px;
+	padding: 10px;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	font-size: 13px;
 	font-family: Franklin Gothic;
 	font-kerning: normal;
 	font-stretch: ultra-condensed;
+	font-weight: 700;
 }
 .el-box img {
-	max-width: 80%;
+	margin-top: 10px;
+	margin-bottom: 15px;
+	max-width: 70%;
 }
 .el-desc {
 	font-size: 10px;
@@ -154,8 +173,48 @@ a, a:active, a:hover{
 }
 .price h6 {
 	color: #ee6d24;
+	font-size: 10px;
+	font-family: Franklin Gothic;
+	font-kerning: normal;
+	font-stretch: ultra-condensed;
+	font-weight: 700;
+	display: inline-block;
 	float: left;
 }
 .price h5 {
-	color
+	color: #171715;
+	font-size: 13px;
+	font-family: Franklin Gothic;
+	font-kerning: normal;
+	font-stretch: ultra-condensed;
+	font-weight: 700;
+	display: inline-block;
+	float: right;
+}
+
+.number-element-button {
+	width: 220px;
+	margin: 40px auto;
+}
+.number-element-button p{
+	display: inline-block;
+	border: 1px solid #171715;
+	padding: 19px 69px;
+	color: #171715;
+	font-size: 13px;
+	font-family: Franklin Gothic;
+	font-kerning: normal;
+	font-stretch: ultra-condensed;
+	font-weight: 700;
+
+}
+.number-element-button p:hover {
+	color: #171715;
+	background-color: #f4df22;
+	border-radius: 1px;
+}
+.number-element-button p:active {
+	color:#ffffff;
+	background-color: #f4df22;
+	border-radius: 2px;
 }
